Caches CompanyTrip in streamlit

--- a/profile-browser.ipynb
+++ b/profile-browser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,54 +19,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'id': 1,\n",
-       " 'first_name': 'Lucy',\n",
-       " 'last_name': 'Rohan',\n",
-       " 'email': 'lucy_rohan@yahoo.com',\n",
-       " 'phone_number': '+12649730709',\n",
-       " 'address': {'street': '426 Cummerata Mountain',\n",
-       "  'city': 'Swiftfield',\n",
-       "  'state': 'UT',\n",
-       "  'zip_code': '87051'},\n",
-       " 'recent_purchases': [{'product_id': 'HoloShades',\n",
-       "   'price': 271.41,\n",
-       "   'date': '2022-07-16T21:52:39.282Z'},\n",
-       "  {'product_id': 'SunSync',\n",
-       "   'price': 155.67,\n",
-       "   'date': '2022-02-28T01:21:42.343Z'},\n",
-       "  {'product_id': 'LightShades',\n",
-       "   'price': 189.87,\n",
-       "   'date': '2021-12-05T14:09:21.056Z'},\n",
-       "  {'product_id': 'ZoomShades',\n",
-       "   'price': 191.48,\n",
-       "   'date': '2022-09-02T01:56:28.159Z'}],\n",
-       " 'website_behavior': {'pages_viewed': 8,\n",
-       "  'time_spent': 56,\n",
-       "  'last_visit': '2023-03-27T08:38:25.780Z'},\n",
-       " 'social_media_engagement': {'facebook': {'likes': 1,\n",
-       "   'comments': 0,\n",
+       " 'first_name': 'Justine',\n",
+       " 'last_name': 'Doyle',\n",
+       " 'email': 'justine15@hotmail.com',\n",
+       " 'phone_number': '+18743569352',\n",
+       " 'address': {'street': '64037 Lowell Lane',\n",
+       "  'city': 'Jacobsonfurt',\n",
+       "  'state': 'IA',\n",
+       "  'zip_code': '69738'},\n",
+       " 'recent_purchases': [],\n",
+       " 'website_behavior': {'pages_viewed': 4,\n",
+       "  'time_spent': 113,\n",
+       "  'last_visit': '2023-03-27T17:01:16.149Z'},\n",
+       " 'social_media_engagement': {'facebook': {'likes': 3,\n",
+       "   'comments': 5,\n",
        "   'shares': 0},\n",
-       "  'instagram': {'likes': 27, 'comments': 7, 'shares': 0},\n",
-       "  'twitter': {'likes': 9, 'comments': 8, 'shares': 5}},\n",
-       " 'customer_service_interactions': {'number_of_interactions': 2,\n",
-       "  'last_interaction': '2023-03-27T11:30:11.536Z'},\n",
-       " 'email_marketing': {'open_rate': 37,\n",
-       "  'click_through_rate': 92,\n",
-       "  'last_email': '2023-03-27T09:48:30.470Z'},\n",
-       " 'events_and_promotions': {'attended_events': ['SXSW', 'Boston Marathon'],\n",
-       "  'promotions_used': ['Frame Your Style', 'Share Your Style']},\n",
-       " 'propensity_to_buy': 0.99,\n",
-       " 'lifetime_value': 1213.03,\n",
-       " 'customer_acquisition_cost': 26.74}"
+       "  'instagram': {'likes': 91, 'comments': 7, 'shares': 0},\n",
+       "  'twitter': {'likes': 2, 'comments': 2, 'shares': 2}},\n",
+       " 'customer_service_interactions': {'number_of_interactions': 10,\n",
+       "  'last_interaction': '2023-03-27T01:41:01.408Z'},\n",
+       " 'email_marketing': {'open_rate': 65,\n",
+       "  'click_through_rate': 17,\n",
+       "  'last_email': '2023-03-27T11:49:11.788Z'},\n",
+       " 'events_and_promotions': {'attended_events': ['CES'], 'promotions_used': []},\n",
+       " 'propensity_to_buy': 0.84,\n",
+       " 'lifetime_value': 275.97,\n",
+       " 'customer_acquisition_cost': 236.93}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,10 +79,10 @@
     {
      "data": {
       "text/plain": [
-       "\"Shadazzle sells innovative and stylish smart sunglasses that are designed to enhance our customers' everyday lives. Our smart sunglasses feature built-in Bluetooth technology, which allows users to connect to their phone and enjoy hands-free calling and music streaming. Our frames and lenses are also customizable, allowing customers to create a personalized look that suits their style. In addition to our smart sunglasses, we also offer accessories such as cases and cleaning kits.\""
+       "\"I apologize for any confusion earlier. As an AI language model, I don't actually sell any products. Shadazzle, the company we created earlier, sells innovative and stylish smart sunglasses that feature built-in Bluetooth technology, customizable frames and lenses, as well as accessories such as cases and cleaning kits. Their mission is to revolutionize the eyewear industry by providing their customers with the ultimate fusion of fashion and technology.\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,20 +93,6 @@
     "company_trip = CompanyTrip.from_name(company)\n",
     "company_trip.ask(\"What do you sell again?\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
