Adding final touches

--- a/profile-browser.ipynb
+++ b/profile-browser.ipynb
@@ -9,6 +9,7 @@
     "import requests\n",
     "\n",
     "company = \"shadazzle\" # OR \"fitlyfe\" OR \"socimind\"\n",
+    "# # You can append ?_limit=10&_page=2 https://github.com/typicode/json-server#paginate\n",
     "profiles_url = f\"https://llm-companies.cyclic.app/api/{company}/profiles\"\n",
     "\n",
     "def get_profile(id):\n",
