--- a/playground.ipynb
+++ b/playground.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "\n",
-    "company = \"shadazzle\" # OR \"fitlyfe\" OR \"socimind\"\n",
+    "companies = (\"shadazzle\", \"fitlyfe\", \"socimind\")\n",
+    "company = companies[0]\n",
     "# # You can append ?_limit=10&_page=2 https://github.com/typicode/json-server#paginate\n",
     "profiles_url = f\"https://llm-companies.cyclic.app/api/{company}/profiles\"\n",
     "\n",
@@ -43,46 +44,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'id': 1,\n",
-       " 'first_name': 'Berry',\n",
-       " 'last_name': 'Gleichner',\n",
-       " 'email': 'berry_gleichner85@hotmail.com',\n",
-       " 'phone_number': '+10553678005',\n",
-       " 'city': 'Blickland',\n",
-       " 'state': 'FL',\n",
-       " 'total_products_purchased': 0,\n",
-       " 'web_pages_viewed': 13,\n",
-       " 'web_time_spent': 389,\n",
-       " 'web_last_visit': '2023-04-15T01:06:21.936Z',\n",
-       " 'facebook_likes': 7,\n",
-       " 'facebook_comments': 3,\n",
-       " 'facebook_shares': 2,\n",
-       " 'instagram_likes': 41,\n",
-       " 'instagram_comments': 1,\n",
-       " 'instagram_shares': 3,\n",
-       " 'twitter_likes': 5,\n",
-       " 'twitter_comments': 7,\n",
-       " 'twitter_shares': 5,\n",
-       " 'cust_support_number_of_interactions': 0,\n",
-       " 'cust_last_interaction': '2023-04-14T17:42:19.171Z',\n",
-       " 'csat': 0.26,\n",
-       " 'emails_opened_last_30_days': 9,\n",
-       " 'email_open_rate': 0.9,\n",
-       " 'email_click_through_rate': 73,\n",
+       " 'first_name': 'Camila',\n",
+       " 'last_name': 'Predovic',\n",
+       " 'email': 'camila54@yahoo.com',\n",
+       " 'phone_number': '+18194411704',\n",
+       " 'city': 'Catalina Foothills',\n",
+       " 'state': 'CA',\n",
+       " 'total_products_purchased': 2,\n",
+       " 'most_recent_purchase': 'MoodShades',\n",
+       " 'web_pages_viewed': 12,\n",
+       " 'web_time_spent': 141,\n",
+       " 'web_last_visit': '2023-04-25T20:54:13.181Z',\n",
+       " 'facebook_likes': 1,\n",
+       " 'facebook_comments': 5,\n",
+       " 'facebook_shares': 1,\n",
+       " 'instagram_likes': 39,\n",
+       " 'instagram_comments': 0,\n",
+       " 'instagram_shares': 4,\n",
+       " 'twitter_likes': 2,\n",
+       " 'twitter_comments': 8,\n",
+       " 'twitter_shares': 3,\n",
+       " 'cust_support_number_of_interactions': 1,\n",
+       " 'cust_last_interaction': '2023-04-25T10:04:48.264Z',\n",
+       " 'csat': 0.63,\n",
+       " 'emails_opened_last_30_days': 4,\n",
+       " 'email_open_rate': 0.56,\n",
+       " 'email_click_through_rate': 75,\n",
        " 'attended_events': [],\n",
-       " 'promotions_used': ['Lens Upgrade', 'Shadazzle VIP'],\n",
-       " 'propensity_to_buy': 0.88,\n",
-       " 'lifetime_value': 577.65,\n",
-       " 'customer_acquisition_cost': 152.55}"
+       " 'promotions_used': ['Share Your Style'],\n",
+       " 'propensity_to_buy': 0.58,\n",
+       " 'lifetime_value': 469.69,\n",
+       " 'customer_acquisition_cost': 275.77}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -115,16 +117,16 @@
     {
      "data": {
       "text/plain": [
-       "'Shadazzle sells innovative and stylish smart sunglasses that combine fashion and technology to enhance the lives of its customers. The sunglasses feature built-in Bluetooth technology, allowing users to connect to their phones for hands-free calling and music streaming. Additionally, Shadazzle offers customizable frames and lenses, giving customers the ability to personalize their sunglasses to match their style. The company also sells accessories such as cases and cleaning kits to complement its smart sunglasses.'"
+       "\"Shadazzle sells innovative and stylish smart sunglasses that combine fashion and technology. Our smart sunglasses feature built-in Bluetooth technology, which allows users to connect to their phone and enjoy hands-free calling and music streaming. In addition, our frames and lenses are customizable, allowing customers to create a personalized look that suits their style. We also offer accessories such as cases and cleaning kits to complement our smart sunglasses. At Shadazzle, our focus is on providing high-quality, innovative products that enhance our customers' daily lives.\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from utils import CompanyTrip\n",
+    "from utils.trips import CompanyTrip\n",
     "\n",
     "company_trip = CompanyTrip.from_name(company)\n",
     "company_trip.ask(f\"What does {company} sell?\")\n"
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -235,44 +237,43 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new APIChain chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mhttps://llm-companies.cyclic.app/api/shadazzle/profiles?id=42&_limit=1\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mhttps://llm-companies.cyclic.app/api/shadazzle/profiles?id=42&_limit=1&fields=id,email,first_name,last_name,phone_number,city,state,total_products_purchased,most_recent_purchase,web_pages_viewed,web_time_spent,web_last_visit,facebook_likes,facebook_comments,facebook_shares,instagram_likes,instagram_comments,instagram_shares,twitter_likes,twitter_comments,twitter_shares,cust_support_number_of_interactions,cust_last_interaction,csat,emails_opened_last_30_days,email_open_rate,email_click_through_rate,attended_events,promotions_used,propensity_to_buy,lifetime_value,customer_acquisition_cost\u001b[0m\n",
       "\u001b[33;1m\u001b[1;3m[\n",
       "  {\n",
       "    \"id\": 42,\n",
-      "    \"first_name\": \"Adonis\",\n",
-      "    \"last_name\": \"Schmeler\",\n",
-      "    \"email\": \"adonis_schmeler87@hotmail.com\",\n",
-      "    \"phone_number\": \"+16674328121\",\n",
-      "    \"city\": \"Torphyport\",\n",
-      "    \"state\": \"NE\",\n",
-      "    \"total_products_purchased\": 1,\n",
-      "    \"most_recent_purchase\": \"ChromaShades\",\n",
-      "    \"web_pages_viewed\": 18,\n",
-      "    \"web_time_spent\": 286,\n",
-      "    \"web_last_visit\": \"2023-04-14T13:18:20.842Z\",\n",
-      "    \"facebook_likes\": 5,\n",
-      "    \"facebook_comments\": 0,\n",
+      "    \"first_name\": \"Soledad\",\n",
+      "    \"last_name\": \"Hilpert\",\n",
+      "    \"email\": \"soledad.hilpert1@yahoo.com\",\n",
+      "    \"phone_number\": \"+19806188689\",\n",
+      "    \"city\": \"New Stephanyfort\",\n",
+      "    \"state\": \"NY\",\n",
+      "    \"total_products_purchased\": 3,\n",
+      "    \"most_recent_purchase\": \"ZoomShades\",\n",
+      "    \"web_pages_viewed\": 1,\n",
+      "    \"web_time_spent\": 140,\n",
+      "    \"web_last_visit\": \"2023-04-25T21:32:26.511Z\",\n",
+      "    \"facebook_likes\": 3,\n",
+      "    \"facebook_comments\": 3,\n",
       "    \"facebook_shares\": 4,\n",
-      "    \"instagram_likes\": 41,\n",
-      "    \"instagram_comments\": 9,\n",
-      "    \"instagram_shares\": 0,\n",
-      "    \"twitter_likes\": 1,\n",
-      "    \"twitter_comments\": 8,\n",
-      "    \"twitter_shares\": 3,\n",
-      "    \"cust_support_number_of_interactions\": 10,\n",
-      "    \"cust_last_interaction\": \"2023-04-14T23:23:54.041Z\",\n",
-      "    \"csat\": 0.26,\n",
-      "    \"emails_opened_last_30_days\": 10,\n",
-      "    \"email_open_rate\": 0.61,\n",
-      "    \"email_click_through_rate\": 9,\n",
+      "    \"instagram_likes\": 24,\n",
+      "    \"instagram_comments\": 8,\n",
+      "    \"instagram_shares\": 2,\n",
+      "    \"twitter_likes\": 5,\n",
+      "    \"twitter_comments\": 4,\n",
+      "    \"twitter_shares\": 2,\n",
+      "    \"cust_support_number_of_interactions\": 7,\n",
+      "    \"cust_last_interaction\": \"2023-04-25T06:02:36.840Z\",\n",
+      "    \"csat\": 0.69,\n",
+      "    \"emails_opened_last_30_days\": 7,\n",
+      "    \"email_open_rate\": 0.53,\n",
+      "    \"email_click_through_rate\": 75,\n",
       "    \"attended_events\": [],\n",
       "    \"promotions_used\": [\n",
-      "      \"Share Your Style\",\n",
-      "      \"Shadazzle VIP\"\n",
+      "      \"Share Your Style\"\n",
       "    ],\n",
-      "    \"propensity_to_buy\": 0.35,\n",
-      "    \"lifetime_value\": 876.26,\n",
-      "    \"customer_acquisition_cost\": 296.38\n",
+      "    \"propensity_to_buy\": 0.95,\n",
+      "    \"lifetime_value\": 815.95,\n",
+      "    \"customer_acquisition_cost\": 83.05\n",
       "  }\n",
       "]\u001b[0m\n",
       "\n",
@@ -282,10 +283,10 @@
     {
      "data": {
       "text/plain": [
-       "'Profile ID 42 belongs to Adonis Schmeler with the email adonis_schmeler87@hotmail.com. Adonis lives in Torphyport, NE, and has purchased one product, ChromaShades. They have interacted with customer support 10 times and have a CSAT score of 0.26. Adonis has used the promotions \"Share Your Style\" and \"Shadazzle VIP.\" Their propensity to buy is 0.35, with a lifetime value of $876.26 and a customer acquisition cost of $296.38.'"
+       "'Profile id 42 belongs to Soledad Hilpert, who has purchased 3 products including ZoomShades. She has interacted with customer support 7 times and her last interaction was on April 25, 2023. Her CSAT score is 0.69 and her propensity to buy is 0.95. She has a lifetime value of $815.95 and her customer acquisition cost is $83.05. She has opened 7 emails in the last 30 days with an open rate of 0.53 and a click-through rate of 75%. She has used the \"Share Your Style\" promotion. She has also engaged with social media, with 3 Facebook likes, 3 Facebook comments, 4 Facebook shares, 24 Instagram likes, 8 Instagram comments, 2 Instagram shares, 5 Twitter likes, 4 Twitter comments, and 2 Twitter shares. She has viewed 1 web page and spent 140 seconds on it during her last visit on April 25, 2023.'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
