Moves to use Google PaLM API

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,47 +44,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'id': 1,\n",
-       " 'first_name': 'Camila',\n",
-       " 'last_name': 'Predovic',\n",
-       " 'email': 'camila54@yahoo.com',\n",
-       " 'phone_number': '+18194411704',\n",
-       " 'city': 'Catalina Foothills',\n",
-       " 'state': 'CA',\n",
-       " 'total_products_purchased': 2,\n",
-       " 'most_recent_purchase': 'MoodShades',\n",
-       " 'web_pages_viewed': 12,\n",
-       " 'web_time_spent': 141,\n",
-       " 'web_last_visit': '2023-04-25T20:54:13.181Z',\n",
-       " 'facebook_likes': 1,\n",
-       " 'facebook_comments': 5,\n",
-       " 'facebook_shares': 1,\n",
-       " 'instagram_likes': 39,\n",
-       " 'instagram_comments': 0,\n",
-       " 'instagram_shares': 4,\n",
-       " 'twitter_likes': 2,\n",
-       " 'twitter_comments': 8,\n",
-       " 'twitter_shares': 3,\n",
-       " 'cust_support_number_of_interactions': 1,\n",
-       " 'cust_last_interaction': '2023-04-25T10:04:48.264Z',\n",
-       " 'csat': 0.63,\n",
-       " 'emails_opened_last_30_days': 4,\n",
-       " 'email_open_rate': 0.56,\n",
-       " 'email_click_through_rate': 75,\n",
+       " 'first_name': 'Magnus',\n",
+       " 'last_name': 'Bailey',\n",
+       " 'email': 'magnus.bailey@hotmail.com',\n",
+       " 'phone_number': '+10881349201',\n",
+       " 'city': 'Fort June',\n",
+       " 'state': 'NH',\n",
+       " 'total_products_purchased': 4,\n",
+       " 'most_recent_purchase': 'SunSync',\n",
+       " 'web_pages_viewed': 20,\n",
+       " 'web_time_spent': 174,\n",
+       " 'web_last_visit': '2023-05-18T04:52:18.330Z',\n",
+       " 'facebook_likes': 3,\n",
+       " 'facebook_comments': 0,\n",
+       " 'facebook_shares': 3,\n",
+       " 'instagram_likes': 28,\n",
+       " 'instagram_comments': 7,\n",
+       " 'instagram_shares': 1,\n",
+       " 'twitter_likes': 4,\n",
+       " 'twitter_comments': 5,\n",
+       " 'twitter_shares': 1,\n",
+       " 'cust_support_number_of_interactions': 3,\n",
+       " 'cust_last_interaction': '2023-05-18T01:15:31.237Z',\n",
+       " 'csat': 0.89,\n",
+       " 'emails_opened_last_30_days': 2,\n",
+       " 'email_open_rate': 0.51,\n",
+       " 'email_click_through_rate': 63,\n",
        " 'attended_events': [],\n",
-       " 'promotions_used': ['Share Your Style'],\n",
-       " 'propensity_to_buy': 0.58,\n",
-       " 'lifetime_value': 469.69,\n",
-       " 'customer_acquisition_cost': 275.77}"
+       " 'promotions_used': ['Lens Upgrade'],\n",
+       " 'propensity_to_buy': 0.02,\n",
+       " 'lifetime_value': 1090.57,\n",
+       " 'customer_acquisition_cost': 89.17}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,10 +117,10 @@
     {
      "data": {
       "text/plain": [
-       "\"Shadazzle sells innovative and stylish smart sunglasses that combine fashion and technology. Our smart sunglasses feature built-in Bluetooth technology, which allows users to connect to their phone and enjoy hands-free calling and music streaming. In addition, our frames and lenses are customizable, allowing customers to create a personalized look that suits their style. We also offer accessories such as cases and cleaning kits to complement our smart sunglasses. At Shadazzle, our focus is on providing high-quality, innovative products that enhance our customers' daily lives.\""
+       "'Shadazzle sells smart sunglasses that combine fashion and technology. The sunglasses feature built-in Bluetooth technology, which allows users to connect to their phone and enjoy hands-free calling and music streaming. The frames and lenses are also customizable, allowing customers to create a personalized look that suits their style. In addition to the sunglasses, Shadazzle also sells accessories such as cases and cleaning kits. '"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,6 +133,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -153,58 +154,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Endpoint: https://llm-companies.cyclic.app/api/shadazzle\n",
-      "GET /profiles\n",
       "\n",
-      "This API is for searching user profiles\n",
+      "  Endpoint: https://llm-companies.cyclic.app/api/shadazzle\n",
+      "  GET /profiles\n",
       "\n",
-      "Query parameters table:\n",
-      "id | integer | Retrieves the unique identifier for a specific user. A valid vaule should be an integer between 1 and 1000 | optional\n",
-      "email | string | The email address of a specific user. | optional\n",
-      "_limit | integer | The maximum number of profiles per page. A valid value should be an integer between 1 and 10 (inclusive). default: 3 | optional\n",
+      "  This API is for searching user profiles\n",
       "\n",
-      "Response schema (JSON object):\n",
-      "id | integer | required\n",
-      "email | string | required\n",
-      "first_name | string | optional\n",
-      "last_name | string | optional\n",
-      "phone_number | string | optional\n",
-      "city | string | optional\n",
-      "state | string | optional\n",
-      "total_products_purchased | number | optional\n",
-      "most_recent_purchase | string | optional\n",
-      "web_pages_viewed | number | optional\n",
-      "web_time_spent | number | optional\n",
-      "web_last_visit | datetime | optional\n",
-      "facebook_likes | number | optional\n",
-      "facebook_comments | number | optional\n",
-      "facebook_shares | number | optional\n",
-      "instagram_likes | number | optional\n",
-      "instagram_comments | number | optional\n",
-      "instagram_shares | number | optional\n",
-      "twitter_likes | number | optional\n",
-      "twitter_comments | number | optional\n",
-      "twitter_shares | number | optional\n",
-      "cust_support_number_of_interactions | number | optional\n",
-      "cust_last_interaction | datetime | optional\n",
-      "csat | number | optional\n",
-      "emails_opened_last_30_days | number | optional\n",
-      "email_open_rate | number | optional\n",
-      "email_click_through_rate | number | optional\n",
-      "attended_events | array | optional\n",
-      "promotions_used | array | optional\n",
-      "propensity_to_buy | number | optional\n",
-      "lifetime_value | number | optional\n",
-      "customer_acquisition_cost | number | optional\n",
+      "  Query parameters table:\n",
+      "  \tid | integer | Retrieves the unique identifier for a specific user. A valid vaule should be an integer between 1 and 1000 | optional\n",
+      "  \temail | string | The email address of a specific user. | optional\n",
+      "  \t_limit | integer | The maximum number of profiles per page. A valid value should be an integer between 1 and 10 (inclusive). default: 3 | optional\n",
       "\n",
-      "Use _limit: 1\n"
+      "  Response schema:\n",
+      "  \tid | integer | required\n",
+      "  \temail | string | required\n",
+      "  \tfirst_name | string | optional\n",
+      "\tlast_name | string | optional\n",
+      "\tphone_number | string | optional\n",
+      "\tcity | string | optional\n",
+      "\tstate | string | optional\n",
+      "\ttotal_products_purchased | number | optional\n",
+      "\tmost_recent_purchase | string | optional\n",
+      "\tweb_pages_viewed | number | optional\n",
+      "\tweb_time_spent | number | optional\n",
+      "\tweb_last_visit | datetime | optional\n",
+      "\tfacebook_likes | number | optional\n",
+      "\tfacebook_comments | number | optional\n",
+      "\tfacebook_shares | number | optional\n",
+      "\tinstagram_likes | number | optional\n",
+      "\tinstagram_comments | number | optional\n",
+      "\tinstagram_shares | number | optional\n",
+      "\ttwitter_likes | number | optional\n",
+      "\ttwitter_comments | number | optional\n",
+      "\ttwitter_shares | number | optional\n",
+      "\tcust_support_number_of_interactions | number | optional\n",
+      "\tcust_last_interaction | datetime | optional\n",
+      "\tcsat | number | optional\n",
+      "\temails_opened_last_30_days | number | optional\n",
+      "\temail_open_rate | number | optional\n",
+      "\temail_click_through_rate | number | optional\n",
+      "\tattended_events | array | optional\n",
+      "\tpromotions_used | array | optional\n",
+      "\tpropensity_to_buy | number | optional\n",
+      "\tlifetime_value | number | optional\n",
+      "\tcustomer_acquisition_cost | number | optional\n",
+      "\n",
+      "  Use _limit: 1\n",
+      "  \n"
      ]
     }
    ],
@@ -217,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chains import APIChain\n",
-    "from langchain.chat_models import ChatOpenAI"
+    "from langchain.llms import GooglePalm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,43 +240,43 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new APIChain chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mhttps://llm-companies.cyclic.app/api/shadazzle/profiles?id=42&_limit=1&fields=id,email,first_name,last_name,phone_number,city,state,total_products_purchased,most_recent_purchase,web_pages_viewed,web_time_spent,web_last_visit,facebook_likes,facebook_comments,facebook_shares,instagram_likes,instagram_comments,instagram_shares,twitter_likes,twitter_comments,twitter_shares,cust_support_number_of_interactions,cust_last_interaction,csat,emails_opened_last_30_days,email_open_rate,email_click_through_rate,attended_events,promotions_used,propensity_to_buy,lifetime_value,customer_acquisition_cost\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mhttps://llm-companies.cyclic.app/api/shadazzle/profiles?id=42&_limit=1\u001b[0m\n",
       "\u001b[33;1m\u001b[1;3m[\n",
       "  {\n",
       "    \"id\": 42,\n",
-      "    \"first_name\": \"Soledad\",\n",
-      "    \"last_name\": \"Hilpert\",\n",
-      "    \"email\": \"soledad.hilpert1@yahoo.com\",\n",
-      "    \"phone_number\": \"+19806188689\",\n",
-      "    \"city\": \"New Stephanyfort\",\n",
-      "    \"state\": \"NY\",\n",
-      "    \"total_products_purchased\": 3,\n",
-      "    \"most_recent_purchase\": \"ZoomShades\",\n",
-      "    \"web_pages_viewed\": 1,\n",
-      "    \"web_time_spent\": 140,\n",
-      "    \"web_last_visit\": \"2023-04-25T21:32:26.511Z\",\n",
-      "    \"facebook_likes\": 3,\n",
-      "    \"facebook_comments\": 3,\n",
-      "    \"facebook_shares\": 4,\n",
-      "    \"instagram_likes\": 24,\n",
-      "    \"instagram_comments\": 8,\n",
-      "    \"instagram_shares\": 2,\n",
-      "    \"twitter_likes\": 5,\n",
-      "    \"twitter_comments\": 4,\n",
-      "    \"twitter_shares\": 2,\n",
-      "    \"cust_support_number_of_interactions\": 7,\n",
-      "    \"cust_last_interaction\": \"2023-04-25T06:02:36.840Z\",\n",
-      "    \"csat\": 0.69,\n",
-      "    \"emails_opened_last_30_days\": 7,\n",
-      "    \"email_open_rate\": 0.53,\n",
-      "    \"email_click_through_rate\": 75,\n",
-      "    \"attended_events\": [],\n",
-      "    \"promotions_used\": [\n",
-      "      \"Share Your Style\"\n",
+      "    \"first_name\": \"Torrey\",\n",
+      "    \"last_name\": \"Casper\",\n",
+      "    \"email\": \"torrey_casper@gmail.com\",\n",
+      "    \"phone_number\": \"+14116176888\",\n",
+      "    \"city\": \"Fort Larrystead\",\n",
+      "    \"state\": \"IA\",\n",
+      "    \"total_products_purchased\": 2,\n",
+      "    \"most_recent_purchase\": \"EcoShades\",\n",
+      "    \"web_pages_viewed\": 2,\n",
+      "    \"web_time_spent\": 117,\n",
+      "    \"web_last_visit\": \"2023-05-18T18:10:22.377Z\",\n",
+      "    \"facebook_likes\": 7,\n",
+      "    \"facebook_comments\": 2,\n",
+      "    \"facebook_shares\": 5,\n",
+      "    \"instagram_likes\": 21,\n",
+      "    \"instagram_comments\": 0,\n",
+      "    \"instagram_shares\": 4,\n",
+      "    \"twitter_likes\": 8,\n",
+      "    \"twitter_comments\": 2,\n",
+      "    \"twitter_shares\": 1,\n",
+      "    \"cust_support_number_of_interactions\": 6,\n",
+      "    \"cust_last_interaction\": \"2023-05-18T00:56:51.534Z\",\n",
+      "    \"csat\": 0.06,\n",
+      "    \"emails_opened_last_30_days\": 9,\n",
+      "    \"email_open_rate\": 0.69,\n",
+      "    \"email_click_through_rate\": 90,\n",
+      "    \"attended_events\": [\n",
+      "      \"Coachella\"\n",
       "    ],\n",
-      "    \"propensity_to_buy\": 0.95,\n",
-      "    \"lifetime_value\": 815.95,\n",
-      "    \"customer_acquisition_cost\": 83.05\n",
+      "    \"promotions_used\": [],\n",
+      "    \"propensity_to_buy\": 0.88,\n",
+      "    \"lifetime_value\": 598.76,\n",
+      "    \"customer_acquisition_cost\": 187.23\n",
       "  }\n",
       "]\u001b[0m\n",
       "\n",
@@ -283,17 +286,17 @@
     {
      "data": {
       "text/plain": [
-       "'Profile id 42 belongs to Soledad Hilpert, who has purchased 3 products including ZoomShades. She has interacted with customer support 7 times and her last interaction was on April 25, 2023. Her CSAT score is 0.69 and her propensity to buy is 0.95. She has a lifetime value of $815.95 and her customer acquisition cost is $83.05. She has opened 7 emails in the last 30 days with an open rate of 0.53 and a click-through rate of 75%. She has used the \"Share Your Style\" promotion. She has also engaged with social media, with 3 Facebook likes, 3 Facebook comments, 4 Facebook shares, 24 Instagram likes, 8 Instagram comments, 2 Instagram shares, 5 Twitter likes, 4 Twitter comments, and 2 Twitter shares. She has viewed 1 web page and spent 140 seconds on it during her last visit on April 25, 2023.'"
+       "'The user profile with id 42 is owned by Torrey Casper. They have purchased 2 products, the most recent being EcoShades. They have viewed 2 web pages and spent 117 seconds on the site. Their last visit was on 2023-05-18T18:10:22.377Z.'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "profiles_prompt = \"What do you know about profile id 42?\"\n",
-    "llm = ChatOpenAI(model_name=os.environ[\"OPENAI_MODEL\"], temperature=0)\n",
+    "llm = GooglePalm(temperature=0)\n",
     "api_chain = APIChain.from_llm_and_api_docs(llm, docs, verbose=True)\n",
     "result = api_chain.run(profiles_prompt)\n",
     "result\n",
